Clean templates for game loop (#65)
<!--- Please write your PR name in the present imperative tense.
Examples of that tense are: "Fix issue in the dispatcher where…",
"Improve our handling of…", etc." -->
<!-- For more information on Pull Requests, you can reference here:
https://success.vanillaforums.com/kb/articles/228-using-pull-requests-to-contribute
-->
## Describe Your Changes

- added languages to `round.html`,  
- made minor improvements on the aesthetics for the wait screen and end
of game
- added a start of game screen, as per the UX document.

## Non-Obvious Technical Information


## Checklist Before Requesting a Review
- [x] The code runs successfully.

```commandline
 curl http://localhost:8000/games/3/player/2/start_of_game
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="content-language" content="en-us">
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
    
      <meta name="description"
            content="A FastAPI application used to play lab games and collect survey data.">
    
    <title>
      
  Start of Game

...


2023-11-23 01:15:41 INFO:     172.20.0.1:33430 - "GET /games/3/player/2/start_of_game HTTP/1.1" 200 OK
2023-11-23 01:16:49 INFO:     172.20.0.1:55296 - "GET /games/3/player/2/end_of_game HTTP/1.1" 200 OK
2023-11-23 01:17:02 INFO:     172.20.0.1:36786 - "GET /games/3/player/2/round HTTP/1.1" 200 OK
```

--- a/prijateli_tree/app/languages/en.json
+++ b/prijateli_tree/app/languages/en.json
@@ -18,9 +18,7 @@
       "you_guessed_correctly": "You guessed correctly in {X} games, and earned {x} points, which means you made extra."
     },
     "game_first_round": {
-      "blue": "BLUE.",
       "guess_color": "Guess the color of the bag:",
-      "red": "RED.",
       "round": "Round",
       "the_computer_chose": "The computer chose a bag and split the balls randomly to each player.",
       "your_ball_is_blue": "Your ball is BLUE.",
@@ -105,6 +103,10 @@
     "thanks_screen": {
       "have_a_great_day": "Have a great day!",
       "thanks": "Thanks for playing!"
+    },
+    "util": {
+      "blue": "BLUE",
+      "red": "RED"
     },
     "waiting_screen": {
       "waiting": "Waiting for others..."
