--- a/prijateli_tree/app/languages/tr.json
+++ b/prijateli_tree/app/languages/tr.json
@@ -18,9 +18,7 @@
       "you_guessed_correctly": "{X} oyunda do\u011fru tahmin ettiniz ve {x} puan kazand\u0131n\u0131z, bu da ekstra kazand\u0131\u011f\u0131n\u0131z anlam\u0131na geliyors."
     },
     "game_first_round": {
-      "blue": "MAV\u0130.",
       "guess_color": "Torban\u0131n rengini tahmin edin:",
-      "red": "KIRMIZI.",
       "round": "Yuvarlak",
       "the_computer_chose": "Bilgisayar bir torba se\u00e7ti ve toplar\u0131 her oyuncuya rastgele b\u00f6l\u00fc\u015ft\u00fcrd\u00fc.",
       "your_ball_is_blue": "Topunuz MAV\u0130.",
@@ -105,6 +103,10 @@
     "thanks_screen": {
       "have_a_great_day": "\u0130yi g\u00fcnler!",
       "thanks": "Oynad\u0131\u011f\u0131n\u0131z i\u00e7in te\u015fekk\u00fcrler!"
+    },
+    "util": {
+      "blue": "MAV\u0130.",
+      "red": "KIRMIZI."
     },
     "waiting_screen": {
       "waiting": "Ba\u015fkalar\u0131n\u0131 bekliyorum..."
