Score is now translatable, removing punctuation

--- a/prijateli_tree/app/languages/en.json
+++ b/prijateli_tree/app/languages/en.json
@@ -43,8 +43,8 @@
     "game_video": {
       "explanation": "Explanation.",
       "feel_free": "Feel free to watch the video again to remind yourself of the rules.",
-      "game": "Practice Game.",
-      "score": "Score."
+      "game": "Practice Game",
+      "score": "Score"
     },
     "homepage": {
       "facilitator_password": "Facilitator Password",
