--- a/prijateli_tree/app/languages/sq.json
+++ b/prijateli_tree/app/languages/sq.json
@@ -43,8 +43,8 @@
     "game_video": {
       "explanation": "Sqairm.",
       "feel_free": "Ndjehuni t\u00eb lir\u00eb ta shikoni videon p\u00ebrs\u00ebri p\u00ebr t'i p\u00ebrkujtuar rregullat.",
-      "game": "Loj\u00eb per ushtrim.",
-      "score": "Rezultati."
+      "game": "Loj\u00eb per ushtrim",
+      "score": "Rezultati"
     },
     "homepage": {
       "facilitator_password": "Fjal\u00ebkalimi i trajnuesit",
