--- a/prijateli_tree/app/languages/tr.json
+++ b/prijateli_tree/app/languages/tr.json
@@ -43,8 +43,8 @@
     "game_video": {
       "explanation": "A\u00e7\u0131klama.",
       "feel_free": "Kurallar\u0131 kendinize hat\u0131rlatmak i\u00e7in videoyu tekrar izlemekten \u00e7ekinmeyin.",
-      "game": "Practice Game.",
-      "score": "Skor."
+      "game": "Practice Game",
+      "score": "Skor"
     },
     "homepage": {
       "facilitator_password": "E\u011fitimcinin \u015eifresi",
