--- a/prijateli_tree/app/languages/en.json
+++ b/prijateli_tree/app/languages/en.json
@@ -1,115 +1,91 @@
 {
-  "en": {
-    "different_game_choices": {
-      "now_you_can_observe": "Now you can choose the players you will observe in the following rounds in this game.",
-      "player_one": "Player 1:",
-      "player_three": "Player 3:",
-      "player_two": "Player 2:",
-      "please_choose_players": "Please choose {X} players"
-    },
-    "different_game_intro": {
-      "different_version": "Now, we will play a different version of the game.",
-      "instead_of": "Instead of assigning you the peers you observe randomly, we will let you choose the players you observe."
-    },
-    "final_score": {
-      "ask_your_teachers": "Ask your teachers about getting your reward!",
-      "congratulations": "Congratulations!",
-      "denars": "{X} denars!",
-      "you_guessed_correctly": "You guessed correctly in {X} games, and earned {x} points, which means you made extra."
-    },
-    "game_first_round": {
-      "guess_color": "Guess the color of the bag:",
-      "round": "Round",
-      "the_computer_chose": "The computer chose a bag and split the balls randomly to each player.",
-      "your_ball_is_blue": "Your ball is BLUE.",
-      "your_ball_is_red": "Your ball is RED."
-    },
-    "game_other_rounds": {
-      "code_guessed_blue": "Code guessed BLUE.",
-      "code_guessed_red": "Code guessed RED.",
-      "name_guessed_blue": "Name guessed BLUE.",
-      "name_guessed_red": "Name guessed RED.",
-      "see_what_others_guessed": "See what some other players guessed in the last round:",
-      "your_guess_was_blue": "Your guess in the last round was BLUE.",
-      "your_guess_was_red": "Your guess in the last round was RED."
-    },
-    "game_results": {
-      "better_luck": "Better luck next time!",
-      "results": "Results",
-      "the_computer_chose_blue": "The computer chose the BLUE bag.",
-      "the_computer_chose_red": "The computer chose the RED bag.",
-      "you_won": "You won!"
-    },
-    "game_video": {
-      "explanation": "Explanation.",
-      "feel_free": "Feel free to watch the video again to remind yourself of the rules.",
-      "game": "Practice Game",
-      "score": "Score"
-    },
-    "homepage": {
-      "facilitator_password": "Facilitator Password",
-      "facilitator_username": "Facilitator Username",
-      "facilitators": "Only for facilitators!",
-      "login": "Log In",
-      "school": "School",
-      "student_language": "Language of Student",
-      "student_name": "First and Last Name"
-    },
-    "intro_practice": {
-      "now_you_will_play": "Now you will play 2 practice games to get used to the rules.",
-      "since_these_rules": "Since these are practice rounds, we will not reward anyone for their performance."
-    },
-    "quiz_balls": {
-      "colors_in_bag": "What colors are the balls in the blue bag?",
-      "five_blue_two_red": "5 blue and 2 red.",
-      "four_blue_two_red": "4 blue and 2 red.",
-      "three_blue_four_red": "3 blue and 4 red."
-    },
-    "quiz_colors": {
-      "black_and_white": "Black and White.",
-      "green_and_yellow": "Green and Yellow.",
-      "instructions": "To win, you have to pick the bag the computer chose. What colors are the bags the computer chooses?",
-      "question": "Question",
-      "quick_quiz": "Quick Quiz!",
-      "red_and_blue": "Red and Blue."
-    },
-    "quiz_peers": {
-      "one_ball_all_peers": "One ball and all peers' guesses.",
-      "one_ball_few_peers": "One ball and a few peers' guesses.",
-      "two_balls": "Two balls.",
-      "what_will_you_observe": "What will you observe to help you learn which bag the computer chose?"
-    },
-    "ready_to_play": {
-      "get_ready": "Get ready to play Red or Blue!",
-      "im_ready": "I'm ready!"
-    },
-    "real_game_intro": {
-      "added_points": "{X} points will be added to your final reward.",
-      "game": "Game",
-      "get_ready": "Get ready to win and earn money!",
-      "if_you_win": "If you win in this game, {X} points will be added to your score and final reward.",
-      "now_we_practiced": "Now that we practiced, we will play the real games."
-    },
-    "rules_screen": {
-      "how_to_play": "How to Play?",
-      "i_understand": "I understand the rules!",
-      "instructions": "You can replay the video as many times as you want. Not knowing the rules lowers your chances of winning. Ask your teacher if you have any questions about the game.",
-      "next": "Next"
-    },
-    "survey": {
-      "before_we_are_done": "Before we are done, we want to ask you a few short questions about how you played today.",
-      "survey_page": "Survey Page"
-    },
-    "thanks_screen": {
-      "have_a_great_day": "Have a great day!",
-      "thanks": "Thanks for playing!"
-    },
-    "util": {
-      "blue": "BLUE",
-      "red": "RED"
-    },
-    "waiting_screen": {
-      "waiting": "Waiting for others..."
+    "en": {
+        "util": {
+            "player": "Player",
+            "blue": "BLUE",
+            "red": "RED",
+            "or": "or",
+            "next": "Next"
+        },
+        "header": {
+            "official_game": "Official Game",
+            "round": "Round",
+            "practice": "Practice Game",
+            "score": "Score"
+        },
+        "ready_to_play": {
+            "welcome": "Welcome!",
+            "select_student": "Select the name of the student who will sit at this desk.",
+            "get_ready": "Get ready to play Red or Blue!",
+            "im_ready": "I'm ready!"
+        },
+        "intro_practice": {
+            "now_you_will_play": "Now you will play 2 practice games to get used to the rules.",
+            "since_these_rules": "Since these are practice rounds, we will not reward anyone for their performance."
+        },
+        "game": {
+            "the_computer_chose": "The computer chose a bag and split the balls randomly among the players.",
+            "your_information": "The computer shows you:",
+            "your_ball": "Your ball:",
+            "guess_color": "Guess the color of the bag:",
+            "see_what_others_guessed": "See what some other players guessed in the last round:",
+            "your_previous_guess": "Your previous guess:"
+        },
+        "waiting_screen": {
+            "waiting": "Waiting for others..."
+        },
+        "game_results": {
+            "better_luck": "Better luck next time!",
+            "the_computer_chose": "The computer chose:",
+            "your_guess": "Your last guess:",
+            "you_won": "You won!"
+        },
+        "real_game_intro": {
+            "now_we_practiced": "Now that we practiced, we will play the real games.",
+            "get_ready": "Get ready to win and earn money!",
+            "if_you_win": "If you win in this game, {X} points will be added to your score and final reward.",
+            "added_points": "{X} points will be added to your final reward."
+        },
+        "final_score": {
+            "ask_your_teachers": "Ask your teachers about getting your reward!",
+            "congratulations": "Congratulations!",
+            "denars": "{X} denars!",
+            "you_guessed_correctly": "You guessed correctly in {X} games, and earned {Y} points, which means you made extra."
+        },
+        "thanks_screen": {
+            "have_a_great_day": "Have a great day!",
+            "thanks": "Thanks for playing!"
+        },
+        "admin_panel": {
+            "for_admin_only": "If you are attempting to access a particular game, please reach out to your game coordinator.",
+            "create_session": "If you are an Administrator attempting to create a session or add users, please click on this link: ",
+            "firstname": "First Name",
+            "lastname": "Last Name",
+            "email": "Email",
+            "new_session": "New Session",
+            "copy_to_clipboard": "Copy to clipboard",
+            "logout": "Logout",
+            "players": "Players",
+            "number_of_games": "Number of Game",
+            "copy_url": "Copy URL",
+            "facilitator_password": "Facilitator Password",
+            "facilitator_username": "Facilitator Username",
+            "facilitators": "Only for facilitators!",
+            "login": "Log In",
+            "school": "School",
+            "student_language": "Language of Student",
+            "student_name": "First and Last Name",
+            "session_and_game_created": "Your session (ID: {Y}) and first game (ID: {X}) have been created! ",
+            "success": "Success: ",
+            "session_created": "Your session (ID: {Y}) has been created! "
+        },
+        "different_game_choices": {
+            "now_you_can_observe": "Now you can choose the players you will observe in the following rounds in this game.",
+            "please_choose_players": "Please choose {X} players to observe"
+        },
+        "different_game_intro": {
+            "different_version": "Now, we will play a different version of the game.",
+            "instead_of": "Instead of assigning you the peers you observe randomly, we will let you choose the players you observe."
+        }
     }
-  }
 }
