--- a/prijateli_tree/app/languages/tr.json
+++ b/prijateli_tree/app/languages/tr.json
@@ -1,115 +1,91 @@
 {
-  "tr": {
-    "different_game_choices": {
-      "now_you_can_observe": "Art\u0131k bu oyunda ilerleyen turlarda g\u00f6zlemleyece\u011finiz oyuncular\u0131 se\u00e7ebilirsiniz.",
-      "player_one": "Oyuncu 1:",
-      "player_three": "Oyuncu 3:",
-      "player_two": "Oyuncu 2:",
-      "please_choose_players": "L\u00fctfen {X} oyuncu se\u00e7in."
-    },
-    "different_game_intro": {
-      "different_version": "\u015eimdi oyunun farkl\u0131 bir versiyonunu oynayaca\u011f\u0131z.",
-      "instead_of": "G\u00f6zlemledi\u011finiz oyuncular\u0131 size rastgele atamak yerine, g\u00f6zlemledi\u011finiz oyuncular\u0131 se\u00e7menize izin verece\u011fiz."
-    },
-    "final_score": {
-      "ask_your_teachers": "\u00d6\u011fretmenlerinize \u00f6d\u00fcl\u00fcn\u00fcz\u00fc nas\u0131l alaca\u011f\u0131n\u0131z\u0131 sorun!",
-      "congratulations": "Tebrikler!",
-      "denars": "{X} dinar!",
-      "you_guessed_correctly": "{X} oyunda do\u011fru tahmin ettiniz ve {x} puan kazand\u0131n\u0131z, bu da ekstra kazand\u0131\u011f\u0131n\u0131z anlam\u0131na geliyors."
-    },
-    "game_first_round": {
-      "guess_color": "Torban\u0131n rengini tahmin edin:",
-      "round": "Yuvarlak",
-      "the_computer_chose": "Bilgisayar bir torba se\u00e7ti ve toplar\u0131 her oyuncuya rastgele b\u00f6l\u00fc\u015ft\u00fcrd\u00fc.",
-      "your_ball_is_blue": "Topunuz MAV\u0130.",
-      "your_ball_is_red": "Topunuz KIRMIZI."
-    },
-    "game_other_rounds": {
-      "code_guessed_blue": "{Ad/Sifre}, {KIRMIZI/MAVI} tahminini yapt\u0131.",
-      "code_guessed_red": "{Ad/Sifre}, {KIRMIZI/MAVI} tahminini yapt\u0131.",
-      "name_guessed_blue": "Ad, MAVI tahminini yapt\u0131.",
-      "name_guessed_red": "Ad, KIRMIZI tahminini yapt\u0131.",
-      "see_what_others_guessed": "Son turda di\u011fer baz\u0131 oyuncular\u0131n neler tahmin etti\u011fini g\u00f6r\u00fcn:",
-      "your_guess_was_blue": "Your guess in the last round was BLUE.",
-      "your_guess_was_red": "Your guess in the last round was RED."
-    },
-    "game_results": {
-      "better_luck": "Bir dahaki sefere iyi \u015fanslar!",
-      "results": "Results",
-      "the_computer_chose_blue": "Bilgisayar MAV\u0130 \u00e7antay\u0131 se\u00e7ti.",
-      "the_computer_chose_red": "Bilgisayar KIRMIZI \u00e7antay\u0131 se\u00e7ti.",
-      "you_won": "Kazand\u0131n!"
-    },
-    "game_video": {
-      "explanation": "A\u00e7\u0131klama.",
-      "feel_free": "Kurallar\u0131 kendinize hat\u0131rlatmak i\u00e7in videoyu tekrar izlemekten \u00e7ekinmeyin.",
-      "game": "Practice Game",
-      "score": "Skor"
-    },
-    "homepage": {
-      "facilitator_password": "E\u011fitimcinin \u015eifresi",
-      "facilitator_username": "E\u011fitimcinin kullan\u0131c\u0131 ad\u0131",
-      "facilitators": "Sadece e\u011fitimciler i\u00e7in!",
-      "login": "Giri\u015f Yap",
-      "school": "Okul",
-      "student_language": "\u00d6\u011frencinin dili",
-      "student_name": "Ad ve soyad"
-    },
-    "intro_practice": {
-      "now_you_will_play": "\u015eimdi kurallara al\u0131\u015fmak i\u00e7in 2 al\u0131\u015ft\u0131rma oyunu oynayacaks\u0131n\u0131z.",
-      "since_these_rules": "Bunlar al\u0131\u015ft\u0131rma turlar\u0131 oldu\u011fu i\u00e7in kimseyi performans\u0131ndan dolay\u0131 \u00f6d\u00fcllendirmeyece\u011fiz."
-    },
-    "quiz_balls": {
-      "colors_in_bag": "Mavi torbadaki toplar hangi renktir?",
-      "five_blue_two_red": "5 mavi ve 2 k\u0131rm\u0131z\u0131.",
-      "four_blue_two_red": "4 mavi ve 2 k\u0131rm\u0131z\u0131.",
-      "three_blue_four_red": "3 mavi ve 4 k\u0131rm\u0131z\u0131."
-    },
-    "quiz_colors": {
-      "black_and_white": "Siyah ve Beyaz.",
-      "green_and_yellow": "Ye\u015fil ve Sar\u0131.",
-      "instructions": "Kazanmak i\u00e7in bilgisayar\u0131n se\u00e7ti\u011fi torbay\u0131 se\u00e7melisiniz. Bilgisayar\u0131n se\u00e7ti\u011fi torbalar ne renkler?",
-      "question": "Soru",
-      "quick_quiz": "H\u0131zl\u0131 s\u0131nav!",
-      "red_and_blue": "K\u0131rm\u0131z\u0131 ve Mavi."
-    },
-    "quiz_peers": {
-      "one_ball_all_peers": "Bir top ve t\u00fcm akranlar\u0131n tahminleri.",
-      "one_ball_few_peers": "Bir top ve birka\u00e7 akran tahminleri.",
-      "two_balls": "\u0130ki top.",
-      "what_will_you_observe": "Bilgisayar\u0131n hangi torbay\u0131 se\u00e7ti\u011fini \u00f6\u011frenmenize yard\u0131mc\u0131 olacak neyi g\u00f6zlemleyeceksiniz?"
-    },
-    "ready_to_play": {
-      "get_ready": "K\u0131rm\u0131z\u0131 m\u0131 Mavi mi oynamaya haz\u0131r olun!",
-      "im_ready": "Ben haz\u0131r\u0131m!"
-    },
-    "real_game_intro": {
-      "added_points": "Son \u00f6d\u00fcl\u00fcn\u00fcze {X} puan eklenecek.",
-      "game": "Oyun",
-      "get_ready": "Kazanmaya ve para kazanmaya haz\u0131r olun!",
-      "if_you_win": "Bu oyunu kazan\u0131rsan\u0131z puan\u0131n\u0131za ve son \u00f6d\u00fcl\u00fcn\u00fcze {X} puan eklenecek.",
-      "now_we_practiced": "Art\u0131k antrenman yapt\u0131\u011f\u0131m\u0131za g\u00f6re ger\u00e7ek oyunlar\u0131 oynayaca\u011f\u0131z."
-    },
-    "rules_screen": {
-      "how_to_play": "Nas\u0131l oynan\u0131r?",
-      "i_understand": "Kurallar\u0131 anl\u0131yorum!",
-      "instructions": "Videoyu istedi\u011finiz kadar tekrar oynatabilirsiniz. Kurallar\u0131 bilmemek kazanma \u015fans\u0131n\u0131z\u0131 azalt\u0131r. Oyunla ilgili sorular\u0131n\u0131z varsa \u00f6\u011fretmeninize sorun.",
-      "next": "Sonraki"
-    },
-    "survey": {
-      "before_we_are_done": "Bitirmeden \u00f6nce size bug\u00fcn nas\u0131l oynad\u0131\u011f\u0131n\u0131za dair birka\u00e7 k\u0131sa soru sormak istiyoruz.",
-      "survey_page": "Anket Sayfas\u0131"
-    },
-    "thanks_screen": {
-      "have_a_great_day": "\u0130yi g\u00fcnler!",
-      "thanks": "Oynad\u0131\u011f\u0131n\u0131z i\u00e7in te\u015fekk\u00fcrler!"
-    },
-    "util": {
-      "blue": "MAV\u0130.",
-      "red": "KIRMIZI."
-    },
-    "waiting_screen": {
-      "waiting": "Ba\u015fkalar\u0131n\u0131 bekliyorum..."
+    "tr": {
+        "util": {
+            "player": "Oyuncu",
+            "blue": "MAVİ",
+            "red": "KIRMIZI",
+            "or": "veya",
+            "next": "Sonraki"
+        },
+        "header": {
+            "official_game": "missing",
+            "round": "Yuvarlak",
+            "practice": "missing",
+            "score": "Skor"
+        },
+        "ready_to_play": {
+            "welcome": "missing",
+            "select_student": "missing",
+            "get_ready": "Kırmızı mı Mavi mi oynamaya hazır olun!",
+            "im_ready": "Ben hazırm!"
+        },
+        "intro_practice": {
+            "now_you_will_play": "Şimdi kurallara alışmak için 2 alıştırma oyunu oynayacaksınız.",
+            "since_these_rules": "Bunlar alıştırma turları olduğu için kimseyi performansından dolayı ödüllendirmeyeceğiz."
+        },
+        "game": {
+            "the_computer_chose": "Bilgisayar bir torba seçti ve topları her oyuncuya rastgele bölüştürdü.",
+            "your_information": "missing",
+            "your_ball": "missing",
+            "guess_color": "Torbanın rengini tahmin edin:",
+            "see_what_others_guessed": "Son turda diğer bazı oyuncuların neler tahmin ettiğini görün:",
+            "your_previous_guess": "missing"
+        },
+        "waiting_screen": {
+            "waiting": "Başkalarını bekliyorum..."
+        },
+        "game_results": {
+            "better_luck": "Bir dahaki sefere iyi şanslar!",
+            "the_computer_chose": "missing",
+            "your_guess": "missing",
+            "you_won": "Kazandın! "
+        },
+        "real_game_intro": {
+            "now_we_practiced": "Artık antrenman yaptığımıza göre gerçek oyunları oynayacağız.",
+            "get_ready": "Kazanmaya ve para kazanmaya hazır olun!",
+            "if_you_win": " Bu oyunu kazanırsanız puanınıza ve son ödülünüze {X} puan eklenecek. ",
+            "added_points": "Son ödülünüze {X} puan eklenecek."
+        },
+        "final_score": {
+            "ask_your_teachers": "Öğretmenlerinize ödülünüzü nasıl alacağınızı sorun!",
+            "congratulations": "Tebrikler!",
+            "denars": "{X} dinar!",
+            "you_guessed_correctly": "{X} oyunda doğru tahmin ettiniz ve {x} puan kazandınız, bu da ekstra kazandığınız anlamına geliyors."
+        },
+        "thanks_screen": {
+            "have_a_great_day": "İyi günler!",
+            "thanks": "Oynadığınız için teşekkürler!"
+        },
+        "admin_panel": {
+            "for_admin_only": "missing",
+            "create_session": "missing",
+            "firstname": "missing",
+            "lastname": "missing",
+            "email": "missing",
+            "new_session": "missing",
+            "copy_to_clipboard": "missing",
+            "logout": "missing",
+            "players": "missing",
+            "number_of_games": "missing",
+            "copy_url": "missing",
+            "facilitator_password": "missing",
+            "facilitator_username": "missing",
+            "facilitators": "missing",
+            "login": "missing",
+            "school": "missing",
+            "student_language": "missing",
+            "student_name": "missing",
+            "session_and_game_created": "missing",
+            "success": "missing",
+            "session_created": "missing"
+        },
+        "different_game_choices": {
+            "now_you_can_observe": "Artık bu oyunda ilerleyen turlarda gözlemleyeceğiniz oyuncuları seçebilirsiniz.",
+            "please_choose_players": "Lütfen {X} oyuncu seçin."
+        },
+        "different_game_intro": {
+            "different_version": "Şimdi oyunun farklı bir versiyonunu oynayacağız.",
+            "instead_of": "Gözlemlediğiniz oyuncuları size rastgele atamak yerine, gözlemlediğiniz oyuncuları seçmenize izin vereceğiz."
+        }
     }
-  }
 }
