Template, excel and en json edit

--- a/prijateli_tree/app/languages/en.json
+++ b/prijateli_tree/app/languages/en.json
@@ -50,7 +50,7 @@
             "ask_your_teachers": "Ask your teachers about getting your reward!",
             "congratulations": "Congratulations!",
             "denars": "{X} denars!",
-            "you_guessed_correctly": "You guessed correctly in {X} games, and earned {Y} points, which means you made extra."
+            "you_guessed_correctly": "You guessed correctly in {X} games, and earned {x} points, which means you made extra."
         },
         "thanks_screen": {
             "have_a_great_day": "Have a great day!",
